# nong

./: .gitignore  CMakeLists.txt  README.md  main.cpp
NONG/include/: NONG.h
NONG/include/NONG/: NONG.h  camera.h  color.h  component.h  font.h  graphics_pipeline.h  image.h  input.h  material.h  mesh.h  meshRenderer.h  object.h  object.tpp  render_context.h  render_texture.h  renderer.h  shader.h  sprite_renderer.h  text_renderer.h  texture.h  texture2d.h  time.h  transform.h  types.h  ui_renderer.h  utility.h  vector.h  vertex.h  window.h
NONG/src/: camera.cpp  color.cpp  component.cpp  font.cpp  graphics_pipeline.cpp  image.cpp  input.cpp  material.cpp  mesh.cpp  object.cpp  render_texture.cpp  renderer.cpp  shader.cpp  sprite_renderer.cpp  text_renderer.cpp  texture.cpp  texture2d.cpp  time.cpp  ui_renderer.cpp  vector.cpp  window.cpp
NONG/src/compiled_shaders/: circle.frag.dxil  circle.frag.spv  generated_shaders.cpp  sprite.frag.dxil  sprite.frag.spv  sprite.vert.dxil  sprite.vert.spv
NONG/src/shaders/: circle.frag.hlsl  sprite.frag.hlsl  sprite.vert.hlsl
cmake/: ShaderBaker.cmake
